Changelog
=========

1.3 Add fix for multiple EXTRAs existing - (2013-02-17)
-------------------------------------------------------

- Add fix for default value for multiple EXTRAs existing
  [Nikita Zubchick]
- Fix dbshell by adding base._connect_string property
  [Bug reporter - skyl]

1.2 Make sure only live connections are used (2012-11-22)
---------------------------------------------------------

- Add get_alive_connection wrapper to conn.ping() test connections before use [Brent Watson]
- Try Oracle rollback if requested [Brent Watson]
- Pass logger from connection to cursor [Brent Watson]
- Use retry on connections in case one has died [Ricardo del Cid]
- Add models.py so test suite runs [Ed Crewe]

1.1 Refactor the tests (2012-11-18)
-----------------------------------

- Make sure the use existing clause works OK for current database settings
- Move tests into oraclepool tests
- Split out the tests from the models files
- Fix the performance test so that its against oracle 
  (not oraclepool itself, since the install can override the oracle engine class)

[Ed Crewe]

1.0 Add multiple connection extras configuration (2012-11-17)
-------------------------------------------------------------

- Use logger for credentials error, if available, and hide pw [Ed Crewe]
- Fix tests for running against an existing database [Ed Crewe]
- Fix logger usage so its OK when logging cursor errors [Ed Crewe]
- Add extras dictionary and logger to connections, rather than globally so each one
  can be configured and log separately [Brent Watson]

0.9 Django 1.4 compatibility fixes (2012-05-18)
-----------------------------------------------

- Fix database connection usage for django 1.4 compatibility 
  [Ed Crewe]
- Fix tests/monkeypatch for performance and regression tests to work OK
  [Ed Crewe]
- Add alias to pool to ensure each connection has its own pool
  [Marc Bee]

0.8 Django 1.3 compatibility fixes (2011-04-08)
-----------------------------------------------
